add persistent planner start semester selection
